# stella-checker

./: .clang-format  .gitignore  CMakeLists.txt  conandata.yml  conanfile.py
libs/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt
